--- a/src/components/date.css
+++ b/src/components/date.css
@@ -7,12 +7,13 @@
     background-color: #2a2a2a;
     color: white;
     border-radius: 12px;
+    padding-top: 15px;
     align-items: center;
     justify-content: center;
   }
   
   .expense-date__month {
-    font-size: 0.75rem;
+    font-size: 0.50rem;
     font-weight: bold;
   }
   
@@ -21,6 +22,6 @@
   }
   
   .expense-date__day {
-    font-size: 1.5rem;
+    font-size: 0.50rem;
     font-weight: bold;
   }
